--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main">
       <h1 class="hover-underline-animation">Subscribe to My Newsletter</h1>
       <div class="formBox">
-          <form action="./success.html" method="post">
+          <form action="./success.html">
               <input type="text" class="formInp" name="first" id="first" placeholder="First Name" required>
               <input type="text" class="formInp" name="last" id="last" placeholder="Surname" required>
               <input type="email" class="formInp" name="email" id="emailId" placeholder="Enter Your Email Address" required>
